카드뒤집기

--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -14,5 +14,5 @@ a { text-decoration: none;}
 table { border-collapse:collapse; border-spacing:0 } 
 fieldset,input{border: 0;}
 body{
-
+    font-family: 'SBAggroB';
 }
