--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,12 @@
 /*반응형, 브라우저 크기가 767px 이하일때*/
 /*반응형, 브라우저 크기가 768이상, 1023px 이하일때*/
 /*반응형, 브라우저 크기가 1024px 이상일때*/
+@font-face {
+  font-family: "SBAggroB";
+  src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2108@1.1/SBAggroB.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 * {
   margin: 0;
   padding: 0;
@@ -68,6 +74,10 @@ fieldset, input {
   border: 0;
 }
 
+body {
+  font-family: "SBAggroB";
+}
+
 .blind {
   position: absolute;
   width: 1px;
@@ -109,4 +119,91 @@ fieldset, input {
   width: inherit;
   height: 30%;
   background: #ffaba8;
+}
+
+.containar {
+  max-width: 1150px;
+  margin: 0 auto;
+}
+.containar [class*=sc-] .group-title {
+  display: flex;
+  margin: 100px 0;
+  font-size: 50px;
+}
+.containar .sc-list {
+  width: 100%;
+  padding: 50px 20px;
+}
+.containar .sc-list .group-postit {
+  width: inherit;
+  height: 600px;
+}
+.containar .sc-list .group-postit .postit-list {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.containar .sc-list .group-postit .postit-list .postit-item {
+  position: absolute;
+  height: 200px;
+}
+.containar .sc-list .group-postit .postit-list .postit-item.show .card-area {
+  transform: rotateY(180deg);
+}
+.containar .sc-list .group-postit .postit-list .postit-item .card-area {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: 0.4s;
+  transform-style: preserve-3d;
+}
+.containar .sc-list .group-postit .postit-list .postit-item .card-area .front-card, .containar .sc-list .group-postit .postit-list .postit-item .card-area .back-card {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.containar .sc-list .group-postit .postit-list .postit-item .card-area .back-card {
+  transform: rotateY(180deg);
+}
+.containar .sc-list .group-postit .postit-list .postit-item:nth-child(1) {
+  top: 105px;
+  left: 20px;
+  width: 32%;
+  transform: translate(-20px, -26.6863px) rotate(-11deg);
+}
+.containar .sc-list .group-postit .postit-list .postit-item:nth-child(1) .front-card, .containar .sc-list .group-postit .postit-list .postit-item:nth-child(1) .back-card {
+  background: #ffd150;
+}
+.containar .sc-list .group-postit .postit-list .postit-item:nth-child(2) {
+  bottom: 65px;
+  left: 20%;
+  width: 42%;
+  transform: translate(-20px, 25.0808px) rotate(-8.99973deg);
+}
+.containar .sc-list .group-postit .postit-list .postit-item:nth-child(2) .front-card, .containar .sc-list .group-postit .postit-list .postit-item:nth-child(2) .back-card {
+  background: #ff6550;
+}
+.containar .sc-list .group-postit .postit-list .postit-item:nth-child(3) {
+  color: #fff;
+  top: 0;
+  left: 41%;
+  width: 34%;
+  transform: translate(-20px, -19.8399px) rotate(7.00001deg);
+}
+.containar .sc-list .group-postit .postit-list .postit-item:nth-child(3) .front-card, .containar .sc-list .group-postit .postit-list .postit-item:nth-child(3) .back-card {
+  background: #91c3ea;
+}
+.containar .sc-list .group-postit .postit-list .postit-item:nth-child(4) {
+  color: #fff;
+  bottom: 150px;
+  right: 0;
+  width: 27.4%;
+  transform: translate(-20px, 19.3999px) rotate(2.00003deg);
+}
+.containar .sc-list .group-postit .postit-list .postit-item:nth-child(4) .front-card, .containar .sc-list .group-postit .postit-list .postit-item:nth-child(4) .back-card {
+  background: #563499;
 }
