--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,14 @@
   font-weight: normal;
   font-style: normal;
 }
+@keyframes slideLeft {
+  0% {
+    transform: translate3d(0%, 0px, 0px);
+  }
+  to {
+    transform: translate3d(-100%, 0px, 0px);
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -87,6 +95,11 @@ body {
   clip: rect(0 0 0 0);
 }
 
+.inner {
+  max-width: 1150px;
+  margin: 0 auto;
+}
+
 .header .hd-introduction {
   width: 100%;
   height: 100vh;
@@ -121,10 +134,6 @@ body {
   background: #ffaba8;
 }
 
-.containar {
-  max-width: 1150px;
-  margin: 0 auto;
-}
 .containar [class*=sc-] .group-title {
   display: flex;
   margin: 100px 0;
@@ -142,20 +151,20 @@ body {
   position: relative;
   width: 100%;
   height: 100%;
+  perspective: 140px;
 }
 .containar .sc-list .group-postit .postit-list .postit-item {
   position: absolute;
   height: 200px;
 }
-.containar .sc-list .group-postit .postit-list .postit-item.show .card-area {
-  transform: rotateY(180deg);
-}
 .containar .sc-list .group-postit .postit-list .postit-item .card-area {
   position: relative;
   width: 100%;
   height: 100%;
-  transition: 0.4s;
+  transition: 0.6s;
   transform-style: preserve-3d;
+  border-radius: 3px;
+  overflow: hidden;
 }
 .containar .sc-list .group-postit .postit-list .postit-item .card-area .front-card, .containar .sc-list .group-postit .postit-list .postit-item .card-area .back-card {
   position: absolute;
@@ -206,4 +215,41 @@ body {
 }
 .containar .sc-list .group-postit .postit-list .postit-item:nth-child(4) .front-card, .containar .sc-list .group-postit .postit-list .postit-item:nth-child(4) .back-card {
   background: #563499;
+}
+.containar .sc-project {
+  overflow: hidden;
+}
+.containar .sc-project .group-project .technique-area {
+  margin-left: -150px;
+  transform: translateZ(0) rotateY(25deg) rotate(-5deg);
+}
+.containar .sc-project .group-project .technique-area .technique-list {
+  animation: slideLeft 20s linear infinite;
+  margin-bottom: 4rem;
+  display: flex;
+}
+.containar .sc-project .group-project .technique-area .technique-list .technique-item {
+  font-size: 30px;
+  padding: 30px;
+}
+.containar .sc-project .group-project .technique-area .technique-list .technique-item:nth-child(5n+1) {
+  background: #00a541;
+}
+.containar .sc-project .group-project .technique-area .technique-list .technique-item:nth-child(5n+2) {
+  background: #ffd150;
+}
+.containar .sc-project .group-project .technique-area .technique-list .technique-item:nth-child(5n+3) {
+  background: #ffaba8;
+}
+.containar .sc-project .group-project .technique-area .technique-list .technique-item:nth-child(5n+4) {
+  background: #2c7677;
+}
+.containar .sc-project .group-project .technique-area .technique-list .technique-item:nth-child(5n+5) {
+  background: #ff6550;
+}
+.containar .sc-project .group-project .slide-area {
+  margin-top: 300px;
+}
+.containar .sc-project .group-project .slide-area .pro {
+  overflow: initial;
 }
