--- a/assets/scss/base/_typo.scss
+++ b/assets/scss/base/_typo.scss
@@ -4,3 +4,11 @@
     font-weight: normal;
     font-style: normal;
 }
+@keyframes slideLeft { 
+    0%{
+        transform: translate3d(-0%, 0px, 0px);
+    }
+    to{
+        transform: translate3d(-100%, 0px, 0px);
+    }
+}
