--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,47 @@ body {
   margin: 0 auto;
 }
 
+.header .hd-intro {
+  width: 100%;
+}
+.header .hd-intro .hd-bg {
+  width: 100%;
+  height: 100vh;
+  background: #fff;
+}
+.header .hd-intro .intro-list {
+  position: relative;
+  width: 100%;
+}
+.header .hd-intro .intro-list .intro-item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+}
+.header .hd-intro .intro-list .intro-item:nth-child(1) {
+  background: #ffaba8;
+}
+.header .hd-intro .intro-list .intro-item:nth-child(2) {
+  background: #ffd150;
+}
+.header .hd-intro .intro-list .intro-item:nth-child(3) {
+  background: #009ca8;
+  font-size: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.header .hd-intro .intro-list .intro-item:nth-child(3) .text-box {
+  overflow: hidden;
+  gap: 30px;
+  display: flex;
+}
+.header .hd-intro .intro-list .intro-item:nth-child(3) .text-box span {
+  display: block;
+  transform: translateY(120%);
+}
 .header .hd-introduction {
   width: 100%;
   height: 100vh;
