--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,12 @@ body {
   margin: 0 auto;
 }
 
+.header {
+  position: relative;
+}
 .header .hd-intro {
+  position: relative;
+  z-index: 5;
   width: 100%;
 }
 .header .hd-intro .hd-bg {
@@ -142,6 +147,10 @@ body {
   transform: translateY(120%);
 }
 .header .hd-introduction {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100vh;
 }
@@ -170,6 +179,7 @@ body {
   width: 30vw;
 }
 .header .hd-introduction .intro-bottom {
+  transform: translateY(100%);
   width: inherit;
   height: 30%;
   background: #ffaba8;
@@ -179,6 +189,7 @@ body {
   display: flex;
   margin: 100px 0;
   font-size: 50px;
+  visibility: hidden;
 }
 .containar .sc-list {
   width: 100%;
