--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -4,6 +4,7 @@
             display: flex;
             margin: 100px 0;
             font-size: 50px;
+            visibility: hidden;
         }
         
     }
