--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,7 @@ fieldset, input {
 
 body {
   font-family: "SBAggroB";
+  scroll-snap-type: y proximity;
 }
 
 .blind {
@@ -191,85 +192,41 @@ body {
   font-size: 50px;
   visibility: hidden;
 }
-.containar .sc-list {
-  width: 100%;
-  padding: 50px 20px;
-}
-.containar .sc-list .group-postit {
-  width: inherit;
-  height: 600px;
-}
-.containar .sc-list .group-postit .postit-list {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  perspective: 140px;
-}
-.containar .sc-list .group-postit .postit-list .postit-item {
-  position: absolute;
-  height: 200px;
-}
-.containar .sc-list .group-postit .postit-list .postit-item .card-area {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  transition: 0.6s;
-  transform-style: preserve-3d;
-  border-radius: 3px;
-  overflow: hidden;
-}
-.containar .sc-list .group-postit .postit-list .postit-item .card-area .front-card, .containar .sc-list .group-postit .postit-list .postit-item .card-area .back-card {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  backface-visibility: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.containar .sc-list .group-postit .postit-list .postit-item .card-area .back-card {
-  transform: rotateY(180deg);
-}
-.containar .sc-list .group-postit .postit-list .postit-item:nth-child(1) {
-  top: 105px;
-  left: 20px;
-  width: 32%;
-  transform: translate(-20px, -26.6863px) rotate(-11deg);
-}
-.containar .sc-list .group-postit .postit-list .postit-item:nth-child(1) .front-card, .containar .sc-list .group-postit .postit-list .postit-item:nth-child(1) .back-card {
-  background: #ffd150;
-}
-.containar .sc-list .group-postit .postit-list .postit-item:nth-child(2) {
-  bottom: 65px;
-  left: 20%;
-  width: 42%;
-  transform: translate(-20px, 25.0808px) rotate(-8.99973deg);
-}
-.containar .sc-list .group-postit .postit-list .postit-item:nth-child(2) .front-card, .containar .sc-list .group-postit .postit-list .postit-item:nth-child(2) .back-card {
-  background: #ff6550;
-}
-.containar .sc-list .group-postit .postit-list .postit-item:nth-child(3) {
-  color: #fff;
-  top: 0;
-  left: 41%;
-  width: 34%;
-  transform: translate(-20px, -19.8399px) rotate(7.00001deg);
-}
-.containar .sc-list .group-postit .postit-list .postit-item:nth-child(3) .front-card, .containar .sc-list .group-postit .postit-list .postit-item:nth-child(3) .back-card {
-  background: #91c3ea;
-}
-.containar .sc-list .group-postit .postit-list .postit-item:nth-child(4) {
-  color: #fff;
-  bottom: 150px;
-  right: 0;
-  width: 27.4%;
-  transform: translate(-20px, 19.3999px) rotate(2.00003deg);
-}
-.containar .sc-list .group-postit .postit-list .postit-item:nth-child(4) .front-card, .containar .sc-list .group-postit .postit-list .postit-item:nth-child(4) .back-card {
-  background: #563499;
-}
 .containar .sc-project {
   overflow: hidden;
+  position: relative;
+}
+.containar .sc-project :root {
+  --base: #ffffff;
+  --accent: #f7d794;
+  --accentSecondary: #F3AF70;
+}
+.containar .sc-project .stroke {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  stroke-linecap: round;
+  fill: none;
+  z-index: 5;
+}
+.containar .sc-project .stroke__wide {
+  stroke: var(--accent);
+  stroke-width: 2000;
+}
+.containar .sc-project .stroke__narrow {
+  stroke: var(--accentSecondary);
+  stroke-width: 15;
+  stroke-dasharray: 30 60;
+  stroke-dashoffset: var(--dashOffset);
+}
+.containar .sc-project .stroke__mask {
+  stroke: var(--base);
+  stroke-width: 15;
+}
+.containar .sc-project .stroke__blob {
+  fill: var(--accent);
 }
 .containar .sc-project .group-project .technique-area {
   margin-left: -150px;
@@ -300,12 +257,60 @@ body {
   background: #ff6550;
 }
 .containar .sc-project .group-project .slide-area {
+  min-height: 56.25vw;
+  max-height: 200vw;
+  height: auto;
+  padding: 8.33%;
+  box-sizing: border-box;
+  margin: 0 auto;
   margin-top: 300px;
 }
-.containar .sc-project .group-project .slide-area .pro {
-  overflow: initial;
+.containar .sc-project .group-project .slide-area .slide-wrap {
+  width: 90%;
+  margin: 0 auto;
 }
-.containar .sc-project .group-project .slide-area .pro .img-wrap {
-  height: 500px;
-  margin-bottom: 20px;
+.containar .sc-project .group-project .slide-area .slide-wrap .slide-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 150px;
+}
+.containar .sc-project .group-project .slide-area .slide-wrap .slide-list .slide-item {
+  width: calc((100% - 300px) / 3);
+  padding: 60px;
+  border-radius: 40px;
+}
+.containar .sc-project .group-project .slide-area .slide-wrap .slide-list .slide-item:nth-child(6n+1) {
+  background: #ffaba8;
+}
+.containar .sc-project .group-project .slide-area .slide-wrap .slide-list .slide-item:nth-child(6n+2) {
+  background: #009ca8;
+}
+.containar .sc-project .group-project .slide-area .slide-wrap .slide-list .slide-item:nth-child(6n+3) {
+  background: #f1dccb;
+}
+.containar .sc-project .group-project .slide-area .slide-wrap .slide-list .slide-item:nth-child(6n+4) {
+  background: #91c3ea;
+}
+.containar .sc-project .group-project .slide-area .slide-wrap .slide-list .slide-item:nth-child(6n+5) {
+  background: #00a541;
+}
+.containar .sc-project .group-project .slide-area .slide-wrap .slide-list .slide-item:nth-child(6n+6) {
+  background: #2c7677;
+}
+.containar .sc-project .group-project .slide-area .slide-wrap .slide-list .slide-item:nth-child(3n+1) {
+  transform: translateY(100px);
+}
+.containar .sc-project .group-project .slide-area .slide-wrap .slide-list .slide-item:nth-child(3n+3) {
+  transform: translateY(-100px);
+}
+.containar .sc-project .group-project .slide-area .slide-wrap .slide-list .slide-item .img-wrap {
+  border-radius: 40px;
+  overflow: hidden;
+}
+.containar .sc-project .group-project .slide-area .slide-wrap .slide-list .slide-item .text-wrap {
+  margin-top: 60px;
+}
+.containar .sc-project .group-project .slide-area .slide-wrap .slide-list .slide-item .text-wrap .pro-title {
+  font-size: 30px;
+  color: #fff;
 }
