--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -15,4 +15,5 @@ table { border-collapse:collapse; border-spacing:0 }
 fieldset,input{border: 0;}
 body{
     font-family: 'SBAggroB';
+    scroll-snap-type: y proximity;
 }
