--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -8,89 +8,48 @@
         }
         
     }
-    .sc-list{
-        width: 100%;
-        padding: 50px 20px;
-        .group-postit{
-            width: inherit;
-            height: 600px;
-            .postit-list{
-                position: relative;
-                width: 100%;
-                height: 100%;
-                perspective: 140px;
-                .postit-item{
-                    &.show .card-area {
-                        // transform: rotateY(180deg);
-                    }
-                    position: absolute;
-                    .card-area{
-                        position: relative;
-                        width: 100%;
-                        height: 100%;
-                        transition: .6s;
-                        transform-style: preserve-3d;
-                        border-radius: 3px;
-                        overflow: hidden;
-                        .front-card,.back-card{
-                            position: absolute;
-                            width: 100%; 
-                            height: 100%;
-                            backface-visibility: hidden;
-                            display: flex;
-                            justify-content: center;
-                            align-items: center;;
-                        }
-                        .back-card{
-                            transform: rotateY(180deg);
-                        }
-                    }
-                    height: 200px;
-                    &:nth-child(1){
-                        top: 105px;
-                        left: 20px;
-                        width: 32%;
-                        transform: translate(-20px, -26.6863px) rotate(-11deg);
-                        .front-card,.back-card{
-                            background: #ffd150;
-                        }
-                    }
-                    &:nth-child(2){
-                        bottom: 65px;
-                        left: 20%;
-                        width: 42%;
-                        transform: translate(-20px, 25.0808px) rotate(-8.99973deg);
-                        .front-card,.back-card{
-                            background: #ff6550;
-                        }
-                    }
-                    &:nth-child(3){
-                        color: #fff;
-                        top: 0;
-                        left: 41%;
-                        width: 34%;
-                        transform: translate(-20px, -19.8399px) rotate(7.00001deg);
-                        .front-card,.back-card{
-                            background: #91c3ea;
-                        }
-                    }
-                    &:nth-child(4){
-                        color: #fff;
-                        bottom: 150px;
-                        right: 0;
-                        width: 27.4%;
-                        transform: translate(-20px, 19.3999px) rotate(2.00003deg);
-                        .front-card,.back-card{
-                            background: #563499;
-                        }
-                    }
-                }
-            }
-        }
-    }
     .sc-project{
+        :root {
+            --base: #ffffff;
+            --accent: #f7d794;
+            --accentSecondary: #F3AF70;
+        }
+        
         overflow: hidden;
+        position: relative;
+        
+        .stroke {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            stroke-linecap: round;
+            fill: none;
+            z-index: 5;
+        }
+        .stroke__wide {
+            stroke: var(--accent);
+            stroke-width: 2000;
+        }
+        .stroke__narrow {
+            stroke: var(--accentSecondary);
+            stroke-width: 15;
+            stroke-dasharray: 30 60;
+            stroke-dashoffset: var(--dashOffset);
+        }
+        .stroke__mask {
+            stroke: var(--base);
+            stroke-width: 15;
+        }
+        .stroke__blob {
+            fill: var(--accent);
+        }
+        .section {
+            
+        }
         .group-project{
+
             .technique-area{
                 margin-left: -150px;
                 transform: translateZ(0) rotateY(25deg) rotate(-5deg);
@@ -120,12 +79,60 @@
                 }
             }
             .slide-area{
+                min-height: 56.25vw;
+                max-height: 200vw;
+                height: auto;
+                padding: 8.33%;
+                box-sizing: border-box;
+                margin: 0 auto;
                 margin-top: 300px;
-                .pro{
-                    overflow: initial;
-                    .img-wrap{
-                        height: 500px;
-                        margin-bottom: 20px;
+                .slide-wrap{
+                    width: 90%;
+                    margin: 0 auto;
+                    .slide-list{
+                        display: flex;
+                        flex-wrap: wrap;
+                        gap: 150px;
+                        .slide-item{
+                            width: calc((100% - 300px)/3);
+                            padding: 60px;
+                            border-radius: 40px;
+                            &:nth-child(6n+1){
+                                background:#ffaba8;
+                            }
+                            &:nth-child(6n+2){
+                                background: #009ca8
+                            }
+                            &:nth-child(6n+3){
+                                background: #f1dccb;
+                            }
+                            &:nth-child(6n+4){
+                                background: #91c3ea;
+                            }
+                            &:nth-child(6n+5){
+                                background: #00a541;
+                            }
+                            &:nth-child(6n+6){
+                                background: #2c7677;
+                            }
+                            &:nth-child(3n+1){
+                                transform: translateY(100px);
+                            }
+                            &:nth-child(3n+3){
+                                transform: translateY(-100px);
+                            }
+                            .img-wrap{
+                                border-radius: 40px;
+                                overflow: hidden;
+                            }
+                            .text-wrap{
+                                margin-top: 60px;
+                                .pro-title{
+                                    font-size: 30px;
+                                    color: #fff;
+                                }
+                            }
+                        }
                     }
                 }
             }
