--- a/assets/scss/base/_common.scss
+++ b/assets/scss/base/_common.scss
@@ -9,3 +9,23 @@
     max-width: 1150px;
         margin: 0 auto;
 }
+.cursor {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
+    width: 60px;
+    height: 60px;
+    background: url(./../images/maincur.png) 0 0 no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    transition: 0.2s;
+    pointer-events: none;
+    &.cursor-over{
+        background: url(./../images/procur.png) 0 0 no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+}
