--- a/assets/scss/base/_reset.scss
+++ b/assets/scss/base/_reset.scss
@@ -1,4 +1,4 @@
-* { margin:0; padding:0; font:inherit; color:inherit; } 
+* { margin:0; padding:0; font:inherit; color:inherit; cursor: none;} 
 *, :after, :before { box-sizing:border-box; flex-shrink:0; } 
 :root { -webkit-tap-highlight-color:transparent; -webkit-text-size-adjust:100%; text-size-adjust:100%; cursor:default; line-height:1.5; overflow-wrap:break-word; -moz-tab-size:4; tab-size:4 } 
 html, body { height:100%; line-height: 1; } 
