--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -1,5 +1,6 @@
 .header{
     position: relative;
+    overflow: hidden;
     .hd-intro{
         position: relative;
         z-index: 5;
@@ -26,14 +27,31 @@
                 }
                 &:nth-child(3){
                     background: #009ca8;
-                    font-size: 100px;
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     .text-box{
+                        font-size: 100px;
                         overflow: hidden;
                         gap: 30px;
                         display: flex;
+                        @include desktopplus{
+                            font-size: 90px;
+                        }
+                        @include desktop{
+                            font-size: 80px;
+                            gap: 20px;
+                        }
+                        @include tablet{
+                            font-size: 60px;
+                        }
+                        @include mobile{
+                            font-size: 50px;
+                            gap: 10px;
+                        }
+                        @include mobilemin{
+                            font-size: 40px;
+                        }
                         span{
                             display: block;
                             transform: translateY(120%);
@@ -45,43 +63,107 @@
         }
     }
     .hd-introduction{
+        overflow: hidden;
         position: absolute;
         z-index: 1;
         top: 0;
         left: 0;
         width: 100%;
         height: 100vh;
-        .intro-top{
-            width: inherit;
-            height: 70%;
-            background: #fff;
-            display: flex;
+        .group-intro{
+            position: relative;
+            width: 100%;
+            height: 100%;
+            background: #ffaba8;
             .intro-name{
                 position: relative;
-                width: 60%;
+                height: 70%;
+
                 h1{
                     position: absolute;
-                    bottom: 100px;
-                    right: 250px;
-                    font-size: 3vw;
-                    line-height: 70px;
+                    width: 100%;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    text-align: center;
+                    font-size: 90px;
+                    line-height: 130px;
+                    color: #373737;
+                    @include desktopplus{
+                        font-size: 80px;
+                        line-height: 100px;
+                    }
+                    @include desktop{
+                        font-size: 70px;
+                    }
+                    @include tablet{
+                        font-size: 50px;
+                        line-height: 70px;
+                    }
+                    @include mobile{
+                        font-size: 40px;
+                    }
+                    @include mobilemin{
+                        font-size: 30px;
+                        line-height: 50px;
+                    }
                 }
             }
-            .intro-img{
-                width: 40%;
-                padding-top: 100px;
-                .img-box{
-                    width: 30vw;
+            
+            .technique-area{
+                
+                .technique-wrap{
+                    margin-left: -150px;
+                    margin-right: -150px;
+                    transform: translateZ(0) rotateY(25deg) rotate(-2deg);
+                    padding: 10px;
+                    background: #fff;
+                    @include mobile{
+                        padding: 5px;
+                    }
+
+                    .technique-list{
+                        animation:  slideLeft 30s linear infinite;
+                        margin-right: 150px;
+                        display: flex; 
+                        .technique-item{
+                            font-size: 30px;
+                            padding: 30px;
+                            @include desktopplus{
+                                font-size: 20px;
+                            }
+                            @include desktop{
+                                padding: 20px;
+                            }
+                            @include tablet{
+                                font-size: 15px;
+                            }
+                            @include mobile{
+                                padding: 15px;
+                            }
+                            @include mobilemin{
+                                font-size: 12px;
+                            }
+                            &:nth-child(5n+1){
+                                background: #00a541;
+                            }
+                            &:nth-child(5n+2){
+                                background: #ffd150;
+                            }
+                            &:nth-child(5n+3){
+                                background: #bcbcbc;
+                            }
+                            &:nth-child(5n+4){
+                                background: #2c7677;
+                            }
+                            &:nth-child(5n+5){
+                                background: #ff6550;
+                            }
+                        }
+                    }
                 }
             }
         }
-        .intro-bottom{
-            transform: translateY(100%);
-            width: inherit;
-            height: 30%;
-            
-            background: #ffaba8;
-            
-        }
+        
     }
 }
