--- a/assets/scss/page/_main.scss
+++ b/assets/scss/page/_main.scss
@@ -1,135 +1,179 @@
 .containar{
-    [class*="sc-"]{
-        .group-title{
-            display: flex;
-            margin: 100px 0;
-            font-size: 50px;
-            visibility: hidden;
-        }
-        
-    }
     .sc-project{
-        :root {
-            --base: #ffffff;
-            --accent: #f7d794;
-            --accentSecondary: #F3AF70;
-        }
-        
-        overflow: hidden;
         position: relative;
-        
-        .stroke {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            stroke-linecap: round;
-            fill: none;
-            z-index: 5;
+        background: #ffd150;
+        padding: 200px 0;
+        @include tablet{
+            padding: 100px 0;
         }
-        .stroke__wide {
-            stroke: var(--accent);
-            stroke-width: 2000;
-        }
-        .stroke__narrow {
-            stroke: var(--accentSecondary);
-            stroke-width: 15;
-            stroke-dasharray: 30 60;
-            stroke-dashoffset: var(--dashOffset);
-        }
-        .stroke__mask {
-            stroke: var(--base);
-            stroke-width: 15;
-        }
-        .stroke__blob {
-            fill: var(--accent);
-        }
-        .section {
-            
-        }
-        .group-project{
-
-            .technique-area{
-                margin-left: -150px;
-                transform: translateZ(0) rotateY(25deg) rotate(-5deg);
-                .technique-list{
-                    animation:  slideLeft 20s linear infinite;
-                    margin-bottom: 4rem;
-                    display: flex;
-                    .technique-item{
-                        font-size: 30px;
-                        padding: 30px;
-                        &:nth-child(5n+1){
-                            background: #00a541;
-                        }
-                        &:nth-child(5n+2){
-                            background: #ffd150;
-                        }
-                        &:nth-child(5n+3){
-                            background: #ffaba8;
-                        }
-                        &:nth-child(5n+4){
-                            background: #2c7677;
-                        }
-                        &:nth-child(5n+5){
-                            background: #ff6550;
-                        }
+        .group-nav{
+            width: 70%;
+            margin: 0 auto;
+            margin-bottom: 50px;
+            font-size: 20px;
+            @include tablet{
+                width: 90%;
+                font-size: 18px;
+            }
+            @include mobile{
+                width: 70%;
+                font-size: 12px;
+            }
+            .sort-area{
+                display: flex; 
+                gap: 10px;
+                color: #ffffff;
+                @include mobile{
+                    flex-wrap: wrap;
+                }
+                button{
+                    padding: 10px;
+                    border: 3px solid #ffffff;
+                    &.on{
+                        background: #ffc013;
                     }
                 }
             }
+        }
+        .group-project{
             .slide-area{
-                min-height: 56.25vw;
-                max-height: 200vw;
                 height: auto;
-                padding: 8.33%;
                 box-sizing: border-box;
                 margin: 0 auto;
-                margin-top: 300px;
                 .slide-wrap{
-                    width: 90%;
+                    width: 70%;
                     margin: 0 auto;
+                    @include tablet{
+                        width: 90%;
+                    }
+                    @include mobile{
+                        width: 70%;
+                    }
                     .slide-list{
-                        display: flex;
-                        flex-wrap: wrap;
-                        gap: 150px;
+                        display: grid;
+                        grid-template-columns: repeat(3,1fr);
+                        gap: 30px;
+                        @include desktop{
+                            grid-template-columns: repeat(2,1fr);
+                        }
+                        @include mobile{
+                            display: flex;
+                            flex-direction: column;
+                        }
                         .slide-item{
-                            width: calc((100% - 300px)/3);
-                            padding: 60px;
-                            border-radius: 40px;
-                            &:nth-child(6n+1){
-                                background:#ffaba8;
+                            display: none;
+                            &.on{
+                                display: block;
                             }
-                            &:nth-child(6n+2){
-                                background: #009ca8
+                            position: relative;
+                            background: #fff;
+                            padding: 20px;
+                            &.slide-title{
+                                grid-column: span 2;
+                                font-size: 50px;
+                                padding: 50px;
+                                @include tablet{
+                                    padding: 40px;
+                                    font-size: 40px;
+                                }
+                                @include mobile{
+                                    font-size: 30px;
+                                    padding: 30px;
+                                    line-height: 40px;
+                                }
                             }
-                            &:nth-child(6n+3){
-                                background: #f1dccb;
+                            &.active{
+                                .card-back{
+                                    visibility: initial;
+                                    opacity: 1;
+                                }
                             }
-                            &:nth-child(6n+4){
-                                background: #91c3ea;
-                            }
-                            &:nth-child(6n+5){
-                                background: #00a541;
-                            }
-                            &:nth-child(6n+6){
-                                background: #2c7677;
-                            }
-                            &:nth-child(3n+1){
-                                transform: translateY(100px);
-                            }
-                            &:nth-child(3n+3){
-                                transform: translateY(-100px);
+                            .card-back{
+                                opacity: 0;
+                                transition: 0.2s;
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                background: #ffce47;
+                                border: 10px solid #ffffff;
+                                box-sizing: border-box;
+                                width: 100%;
+                                height: 100%;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                gap: 20px;
+                                @include desktopplus{
+                                    flex-direction: column;
+                                }
+                                @include desktop{
+                                    flex-direction: row;
+                                    gap: 10px;
+                                }
+                                @include mobilemin{
+                                    flex-direction: column;
+                                }
+                                a{
+                                    border: 4px solid #ffffff;
+                                    
+                                    &:hover{
+                                        .site-direct{
+                                            transform: translateY(-60px);
+                                        }
+                                    }
+                                    .site-direct{
+                                        display: flex;
+                                    flex-direction: column;
+                                    transition: 0.3s;
+                                    }
+                                    font-size: 20px;
+                                    overflow: hidden;
+                                    height: 65px;
+                                    padding: 20px;
+                                    
+                                    border-radius: 50px;
+                                    color: #fff;
+
+                                    span+span{
+                                        margin-top: 40px;
+                                    }
+                                }
+                                
                             }
                             .img-wrap{
-                                border-radius: 40px;
+                                position: relative;
                                 overflow: hidden;
+                                padding-bottom: 56.26%;
+                                img{
+                                    position: absolute;
+                                    top: 0;
+                                    left: 0;
+                                    width: 100%;
+                                    height: 100%;
+                                    object-fit: cover;
+                                }
                             }
                             .text-wrap{
-                                margin-top: 60px;
+                                color: #7d7c7c;
                                 .pro-title{
-                                    font-size: 30px;
-                                    color: #fff;
+                                    display: block;
+                                    margin: 30px 0 0 0;
+                                    font-size: 35px;
+                                    color: #000;
+                                }
+                                p{
+                                    font-size: 20px;
+                                    padding: 20px 0;
+                                }
+                                .hashtag{
+                                    display: flex;
+                                    gap: 10px;
+                                    font-size: 12px;
+                                    flex-wrap: wrap;
+                                    span{
+                                        padding: 5px;
+                                        border: 1px solid #7d7c7c;
+                                    }
                                 }
                             }
                         }
