--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -72,7 +72,7 @@
         height: 100vh;
         .group-intro{
             position: relative;
-            width: 100%;
+            width: 100vw;
             height: 100%;
             background: #ffaba8;
             .intro-name{
